--- a/CSS/css_learning.html
+++ b/CSS/css_learning.html
@@ -21,12 +21,18 @@
                 color:black;
                 font:normal bold 20px "宋体";
             }
+            /*类选择器
+            .classname*/
+            .van {
+                color:blue;
+            }
         </style>
     </head>
     <body>
         <h1>英雄传说黎之轨迹</h1>
         <h2>里解决屋</h2>
-        <p>范·阿克莱德</p>
+        <!--调用类样式-->
+        <div class="van">范·阿克莱德</div>
         <h2>特殊角色主要</h2>
     </body>
 </html>
