--- a/CSS/css_learning_1.html
+++ b/CSS/css_learning_1.html
@@ -9,9 +9,10 @@
                 font-size:50px;
                 font-family: "宋体";/*字体*/
             }
-            p {
-                color:blue;
-                font-size: 14px;
+
+            a {
+                /*去掉超链接下划线*/
+                text-decoration: none;
             }
             /*综合字体语法
             selector {font: font-style font-weight font-size/line-weight font-family;}
@@ -57,8 +58,7 @@
                 font-size:30px;
                 color:black;
                 font-weight:bold;
-            }
-            
+            }           
             
             /*结构伪类选择器
             标签的父元素的孩子(即自己的兄弟或自己的样式)*/
@@ -83,6 +83,18 @@
                 color:brown;
             }
 
+            /*伪元素选择器*/
+            p::first-letter{
+                color:red;
+            }
+            p::selection{/*鼠标框中部分*/
+                color:blue;
+            }
+
+            div::before{/*在div前增加内容，为行内元素。在后面加内容则为after*/
+                content:"hh";
+            }
+
         </style>
     </head>
     <body>
@@ -102,6 +114,7 @@
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <div id="nite">奈特搜查官</div><br>
         <div id="dasvany">达斯瓦尼警部</div><br>
+        <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
     </body>
 </html>
 <!--注释1
