--- a/HTML/first.html
+++ b/HTML/first.html
@@ -147,7 +147,8 @@
         <h1>div和span</h1>
         <!--div和span为图层
             用于页面灵活布局
-        div独自占一行，span不-->
+        div独自占一行，宽度默认为父元素宽度，高度默认由内容撑开，可设置宽高
+        span一行可显示多个，宽高默认由内容撑开，不可设置宽高-->
         <div id="div1">I'm div1</div><div id="div2">I'm div2</div>
         <span id="span1">I'm span1</span><span id="span2">I'm span2</span>
     </body>
